# agent

./: Cargo.toml  README.md
scripts/: smoke.sh
src/: agent_loop.rs  job.rs  lib.rs  llm.rs  policy.rs  provider.rs  registry.rs  spawn.rs  thread.rs  tools.rs
